# hello-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  function.md  optimization_report_20260317_233438.md  optimize_project.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
codes/advanced_data_structures/: del _keyword.py  dictionary_basic_use.py  dictionary_other_use.py  dictionary_traversal.py  format_string.py  iterating_dict_list.py  list_basic_use.py  list_sort.py  list_statistics.py  list_traversal.py  string_alignment.py  string_find_replace.py  string_split_connect.py  string_statistical.py  tuple_basic_use.py  tuple_traversal.py
codes/advanced_grammar/: define_func_default_parameter.py  global_variable_name.py  global_variables2.py  global_variables_location.py  mult_return_values.py  multi_parameter_sum.py  notes_default_parameter.py  quote.py  recur_func_features.py  (+2 more)
doc/: 01-异常.md  02-模块_包.md  card_manage.md  cycle.md  editor.md  first_line.md  installation.md  introduction.md  judgment_statement.md  list.md  object_oriented_basic.md  oop_advanced.md  oop_application.md  oop_encapsulation.md  oop_inherit.md  tuple_dict_str.md  variable.md  文件操作.md
docs/: getting_started.md
examples/: basic_usage.py
java_code_inspector/: README.md  requirements.txt  run_tests.py
reports/: quality_report_20260317_235800.json  quality_report_20260317_235800.md
scripts/: commit_and_push.sh  quality_report.py
tests/: test_basic.py  test_lessons.py  test_runner.py
(+93 files in other folders)
